--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.ikurek.drugsafe"
         minSdkVersion 23
         targetSdkVersion 28
-        versionCode 1
-        versionName "0.8"
+        versionCode 2
+        versionName "0.9"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -55,6 +55,10 @@ dependencies {
 
     // Barcodes
     implementation 'com.github.Tetr4:ZXingView:-SNAPSHOT'
+
+    // Room
+    implementation "androidx.room:room-runtime:2.1.0-alpha02"
+    kapt "androidx.room:room-compiler:2.1.0-alpha02"
 
     // Tests
     testImplementation 'junit:junit:4.12'
