--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
+        android:fullBackupContent="@xml/backup_descriptor"
+        android:theme="@style/AppTheme">
         <activity
                 android:name=".mainactivity.MainActivity"
                 android:label="@string/app_name"
